--- a/Readme
+++ b/Readme
@@ -1,1 +1,15 @@
 Para ter dados infinitos tem que rodar no terminal docker exec api_monitor python3 /app/api_monitor.py depois que subir o projeto.
+
+
+api-monitor-docker/
+│
+├── api_monitor.py          # Script Python principal
+├── Dockerfile              # Configuração da imagem Docker
+├── docker-compose.yml      # Orquestração do container
+├── README.md               # Documentação do projeto
+│
+├── data/                   # Diretório de dados (criado automaticamente)
+│   └── api_data.db         # Banco de dados SQLite
+│
+└── logs/                   # Diretório de logs (criado automaticamente)
+    └── api_monitor.log     # Arquivo de log
